Fixed bugs due to non-forking execution on windows